# vyos-modular

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  requirements.txt  sample_config.yml  search.html  setup.cfg  sitemap.xml
.github/workflows/: deploy-docs.yml  pypi-publish.yml
ansible/: Dockerfile
ansible/group_vars/: all.yml
ansible/roles/finalize/tasks/: cleanup.yml  install-custom-packages.yml  main.yml  make-iso.yml
ansible/roles/prepare/tasks/: main.yml  mount-iso.yml  prepare-environment.yml  set-facts.yml
ansible/roles/prepare/templates/: debian.list.j2
changelog/: index.html
docs/: changelog.md  index.md  module_list.md  usage.md
docs/modules/: ansible.md  core-modification.md  spec.md
module_list/: index.html
modules/ansible/: index.html
modules/core-modification/: index.html
modules/spec/: index.html
search/: search_index.json
usage/: index.html
vyos_modular/: builder.py  commands.py  main.py  model.py
vyos_modular/common/: commands.py  config.py
vyos_modular/core_build/: builder.py
vyos_modular/iso_build/: builder.py  main.py
vyos_modular/iso_customize/: builder.py
vyos_modular/templates/: playbook.yml.j2  sample_config.yml
