[metadata]
name = vyos_modular
version = 2.1.0
description = A modular customization system for vyos ISOs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = vyos_modular
install_requires =
  pyyaml==6.0
  Jinja2==3.1.2

[options.entry_points]
console_scripts =
  vyos-modular = vyos_modular.main:main