[metadata]
name = vyos_modular
version = 2.3.0
description = A modular customization system for vyos ISOs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = 
  vyos_modular
  vyos_modular.common
  vyos_modular.core_build
  vyos_modular.iso_build
  vyos_modular.iso_customize
  vyos_modular.templates
install_requires =
  pyyaml==6.0
  Jinja2==3.1.2

[options.package_data]
* = *.yml, *.j2

[options.entry_points]
console_scripts =
  vyos-modular = vyos_modular.main:main